# fastcv_api

./: .gitignore  CMakeLists.txt  README.md
include/: fastcv.hpp  half.h  status.h  sys.h  types.h
lib/fastcv/ios-arm64/: libapi_fastcv.dylib  libfastcv_ios_arm64.dylib
lib/fastcv/ios-armv7/: libapi_fastcv.dylib  libfastcv_ios_armv7.dylib
lib/fastcv/ios_os-universal/: libapi_fastcv_ios_os-universal.dylib  libfastcv_ios_os-universal.dylib
lib/fastcv/ios_sim-universal/: libfastcv_ios_sim_universal.dylib
lib/fastcv/ios_sim-x86/: libapi_fastcv.dylib  libfastcv_ios_sim_x86.dylib
lib/fastcv/ios_sim-x86_64/: libapi_fastcv.dylib  libfastcv_ios_sim_x86_64.dylib
lib/fastcv/mac-x86_64/: libfastcv_mac_x86_64.dylib
lib/fastcv/windows-x86_64_debug/: api_fastcv.lib
lib/fastcv/windows-x86_64_release/: api_fastcv.lib  libfastcv_windows_x86_64.lib
lib/fastcv/windows-x86_debug/: api_fastcv.lib  libfastcv_windows_x86.lib
lib/fastcv/windows-x86_release/: api_fastcv.lib  libfastcv_windows_x86.lib
lib/fmath/ios-arm64/: libfmath_ios_arm64.dylib
lib/fmath/ios-armv7/: libfmath_ios_armv7.dylib
lib/fmath/ios_os-universal/: libfmath_ios_os_universal.dylib
lib/fmath/ios_sim-universal/: libfmath_ios_sim_universal.dylib
lib/fmath/ios_sim-x86/: libfmath_ios_sim_x86.dylib
lib/fmath/ios_sim-x86_64/: libfmath_ios_sim_x86_64.dylib
lib/fmath/mac-x86_64/: libfmath_mac_x86_64.dylib
lib/fmath/windows-x86_64_debug/: libfmath_windows_x86_64.lib
lib/fmath/windows-x86_64_release/: libfmath_windows_x86_64.lib
lib/fmath/windows-x86_debug/: libfmath_windows_x86.lib
lib/fmath/windows-x86_release/: libfmath_windows_x86.lib
src/: arithmetic.cpp  bilateralFilter.cpp  boxFilter.cpp  convertTo.cpp  crop.cpp  cvtColor.cpp  dilate.cpp  erode.cpp  fastBilateralFilter.cpp  fastGuidedFilter.cpp  filter.cpp  func_inline.hpp  gaussianBlur.cpp  imageReadWrite.cpp  integral.cpp  oclib.cpp  opencl.cpp  remap.cpp  resize.cpp  rotate.cpp  setTo.cpp  splitMerge.cpp  warpAffine.cpp
src/include/: image.h  vector.hpp
tests/: CMakeLists.txt  cfg.cpp  cfg.h  test_head.hpp  test_main.cpp
tests/base/: test_I420.cpp  test_bilateralFilter.cpp  test_blur.cpp  test_boxFilter.cpp  test_convertTo.cpp  test_crop.cpp  test_cvtColor.cpp  test_dilate.cpp  test_encode_decode.cpp  test_erode.cpp  test_fastBilateralFilter.cpp  test_filter.cpp  test_gaussianBlur.cpp  test_half_bilateralFilter.cpp  test_half_boxFilter.cpp  test_half_convertTo.cpp  test_half_crop.cpp  test_half_cvtColor.cpp  test_half_filter.cpp  test_half_gaussianBlur.cpp  test_half_integral.cpp  test_half_resize.cpp  test_half_warpAffine.cpp  test_integral.cpp  test_pixel_derefer.cpp  test_readImage.cpp  test_remap.cpp  test_resize.cpp  test_rotate.cpp  test_rotate_yuv420.cpp  test_warpAffine.cpp
tests/benchmark/: CMakeLists.txt  benchmark_bilateral.cpp  benchmark_boxfilter.cpp  benchmark_convertto.cpp  benchmark_crop.cpp  benchmark_cvtcolor.cpp  benchmark_filter2d.cpp  benchmark_gaussblur.cpp  benchmark_integral.cpp  benchmark_resize.cpp  benchmark_warpaffine.cpp  mytime.h
tests/benchmark/scripts/: arm64.sh  armv7.sh  cuda.sh  opencl.sh  x86.sh
tests/configure/: testconfigure.txt
tests/cross/: test_BGR2YCrCbImage_cross.cpp  test_YCrCb2BGRImage_cross.cpp  test_changeDataTypeAndScale_cross.cpp  test_integralImage_cross.cpp  test_mergeNChannelsImage_cross.cpp  test_resize_cross.cpp  test_splitNChannelsImage_cross.cpp
tests/scripts/: memcheck.sh  test_all.sh
